k8s-manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
  namespace: devops-test-rod
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: grafana
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: influxdb
  name: influxdb
  namespace: devops-test-rod
spec:
  ports:
  - name: "8086"
    port: 8086
    targetPort: 8086
  - name: "8083"
    port: 8083
    targetPort: 8083
  selector:
    io.kompose.service: influxdb
status:
  loadBalancer: {}
